--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <div class="absolute inset-0 opacity-20" style="background-image: url('https://i.postimg.cc/65YqPTbJ/nh-n-n.jpg'); background-size: cover; background-position: center;"></div>
         <div class="relative z-10 text-center max-w-4xl mx-auto">
             <h1 class="text-4xl md:text-5xl font-extrabold leading-tight mb-6 animate-fade-in-down">
-                KIẾN TẠO TƯƠNG LAI SỐ CÙNG CÔNG NGHỆ THÔNG TIN PTIT
+                TẠO GIÁ TRỊ THẬT - DẪN LỖI TƯƠNG LAI CÙNG CÔNG NGHỆ THÔNG TIN PTIT
             </h1>
             <p class="text-lg md:text-xl mb-10 opacity-90 animate-fade-in-up">
                 Chào đón các bạn thí sinh tiềm năng đến với chương trình tuyển sinh ngành Công nghệ Thông tin tại Học viện Công nghệ Bưu chính Viễn thông năm học 2026-2027!
@@ -128,15 +128,15 @@
             </p>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mt-12">
                 <div class="p-6 bg-ptit-beige rounded-lg shadow-md hover:shadow-xl transition duration-300">
-                    <h3 class="text-xl font-semibold text-ptit-dark-blue mb-3">Đội Ngũ Giảng Viên</h3>
+                    <h3 class="text-xl font-semibold text-ptit-dark-blue mb-3">ĐỘI NGŨ GIẢNG VIÊN</h3>
                     <p class="text-ptit-dark-blue">Hàng trăm giáo sư, tiến sĩ, chuyên gia giàu kinh nghiệm trong và ngoài nước.</p>
                 </div>
                 <div class="p-6 bg-ptit-beige rounded-lg shadow-md hover:shadow-xl transition duration-300">
-                    <h3 class="text-xl font-semibold text-ptit-dark-blue mb-3">Cơ Sở Vật Chất</h3>
+                    <h3 class="text-xl font-semibold text-ptit-dark-blue mb-3">CƠ SỞ VẬT CHẤT</h3>
                     <p class="text-ptit-dark-blue">Phòng lab hiện đại, thư viện số, không gian học tập sáng tạo.</p>
                 </div>
                 <div class="p-6 bg-ptit-beige rounded-lg shadow-md hover:shadow-xl transition duration-300">
-                    <h3 class="text-xl font-semibold text-ptit-dark-blue mb-3">Cơ Hội Việc Làm</h3>
+                    <h3 class="text-xl font-semibold text-ptit-dark-blue mb-3">CƠ HỘI VIỆC LÀM</h3>
                     <p class="text-ptit-dark-blue">Mạng lưới cựu sinh viên rộng khắp, tỷ lệ sinh viên có việc làm cao sau tốt nghiệp.</p>
                 </div>
             </div>
